@@ -22,6 +22,7 @@ Fixed: maximum string length calculation for non-extended patches did not take t
 Fixed: sprite frame selection up\down button did not work correctly.
 Fixed: sound priority values can now be in the full signed integer range (though anything above 127 is useless). https://github.com/GitExl/WhackEd4/issues/12
 Fixed: the MBF TRANSLATION2 flag is now available and will not be removed upon saving. Thanks to j0e.
+Fixed: the MBF TRANSLATION1 flag is now recognized, and aliased to TRANSLATION for Boom compatibility. Thanks to hawkwind3.
 
 Version 1.2.4
 -------------
